[FEAT] update api get resource by list role